# TelnetSever

./: .gitignore  CMakeLists.txt  README.md
src/: main.c
src/commands/call/: call.c  call.h
src/commands/dump/: dump.c  dump.h
src/commands/resolve/: resolve.c  resolve.h
src/commands/resolve_by_address/: resolve_by_address.c  resolve_by_address.h
src/commands/write_by_address/: write_by_address.c  write_by_address.h
src/common/: common.c  common.h
